# webtool-plateform-backend

./: .env  .env.example  API_ENDPOINTS.md  IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  main.py  pyproject.toml  requirements.txt  run.py  test_agent.py
Agents/: generation_agent.py  storygenerator.py
app/: __init__.py  main.py
app/api/v1/: __init__.py  router.py
app/api/v1/agents/: __init__.py  registry.py  router.py
app/core/: __init__.py  config.py
app/schemas/: __init__.py  base.py
app/services/: __init__.py  agent_executor.py
config/: gemini_config.py
core/: tools.py
